projet_gl/src/test/deca/syntax/invalid/assign/incorrectAssign.deca
// Description:
//    invalid test parser for assign.
//
// Resultats:
//    ligne 11 : mismatched input '==' expecting {'=', ',', ';'}
//
// Historique:
//    cree le 13/01/2024

{
    int a == 1;
}